--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,9 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Jekyll site CI
 
 on:
@@ -31,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: bundle install
     - name: Build site
-      run: bundle exec jekyll build
+      run: JEKYLL_ENV=production bundle exec jekyll build --baseurl "/my-talk-slides"
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
